force-app/main/default/objects/MDG_Interface__c/MDG_Interface__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>MDG Interface</label>
</CustomObject>