force-app/main/default/objects/MDG_Interface__c/fields/AppId__c.field-meta.xml
<CustomField>
    <fullName>AppId__c</fullName>
    <label>AppId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>