force-app/main/default/objects/MDG_Interface__c/fields/If_Id__c.field-meta.xml
<CustomField>
    <fullName>If_Id__c</fullName>
    <label>If_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>