force-app/main/default/objects/MDG_Interface__c/fields/PCOMPANY__c.field-meta.xml
<CustomField>
    <fullName>PCOMPANY__c</fullName>
    <label>PCOMPANY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>